<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textSoal1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal1"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal2"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal3"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal4"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal4"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal5"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal5"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal6"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal6"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal7"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal7"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal8"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal8"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>
    <!-- Batesan -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/textSoal9"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/soal9"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:layout_marginEnd="5dp"/>
        <RadioGroup
            android:id="@+id/btnGroup9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/rdbtnYes9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes" />
            <RadioButton
                android:id="@+id/rdbtnNo9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"/>
        </RadioGroup>
    </LinearLayout>

</LinearLayout>